--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -8,3 +8,4 @@ MathJax.Hub.Config({
 <script async type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
+<link rel = "stylesheet" href = "/css/main.css">
