--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,12 @@
 .main-content-wrap{
     max-width: 100%
 }
+
+.content {
+  max-width: 700px;
+  margin: 40px auto 10px;
+  padding: 0 15px;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #333;
+}
