--- a/static/stat230/lecture_notes/css/my-font.css
+++ b/static/stat230/lecture_notes/css/my-font.css
@@ -146,6 +146,8 @@ h3 {
 .brown { color:brown;}
 .warmyellow { color:   #FFB81C }
 .dark-maroon{color: #600a09}
+.ggplotblue{ color: #619CFF}
+
 
 .bold { font-weight: bold; }
 .bolder { font-weight: bolder; }
