--- a/static/stat120/css/my-font.css
+++ b/static/stat120/css/my-font.css
@@ -141,7 +141,7 @@ h3 {
 .grey { color: gray; }
 .brown { color:brown;}
 
-.b { font-weight: bold; color:#0148A4;}
+.b { font-weight: bold; color:brown;}
 .bold { font-weight: bold; color:#FFA500;}
 .bolder { font-weight: bolder; color:#0148A4;}
 
