--- a/static/stat120/css/xaringan-themer-solns.css
+++ b/static/stat120/css/xaringan-themer-solns.css
@@ -180,6 +180,7 @@ blockquote, .bq {
   background-color: #FFD700; 
   color: #0C4839;
   padding: 0.5em;
+  font-weight: bold;
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
 }
