--- a/static/css/my-font.css
+++ b/static/css/my-font.css
@@ -142,7 +142,7 @@ h3 {
 .brown { color:brown;}
 
 .b { font-weight: bold; color:brown;}
-.bold { font-weight: bold; color:#FA8072;}
+.bold { font-weight: bold; color:#FFA500;}
 .bolder { font-weight: bolder; color:#0148A4;}
 
 .i { font-style: italic; color:#e64626; }
