--- a/layouts/partials/custom_js.html
+++ b/layouts/partials/custom_js.html
@@ -24,3 +24,8 @@
     });
     </script>
     <!-- End of mathjax configuration -->
+    
+    
+{{ if .Params.avatar }}
+    <img src="{{ .Site.BaseURL }}{{ .Params.avatar }}" alt="{{ .Title }}">
+{{ end }}
