--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,3 +10,16 @@
   line-height: 1.7;
   color: #333;
 }
+
+
+.content-container {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+
+@media (max-width: 768px) {
+    .content-container {
+        max-width: 100%;
+    }
+}
